feat: :tada: Forked

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Merge Firmware
       run: |
-        ./generate_merge_firmware_command.py esp32dev esp32s3 | tee merge_firmware.bash
+        ./generate_merge_firmware_command.py esp32dev esp32s3 esp32c3 esp32c6 | tee merge_firmware.bash
         bash -ex ./merge_firmware.bash
 
     - name: Generate ESP Web Tools
