--- a/platformio.ini
+++ b/platformio.ini
@@ -1,31 +1,32 @@
 [platformio]
-default_envs = esp32s3
+default_envs = esp32dev
 
 [env]
 monitor_speed = 115200
 platform = espressif32
 lib_deps =
-  h2zero/NimBLE-Arduino
+   h2zero/NimBLE-Arduino @ 1.4.2
 
 [env:esp32dev]
 framework = arduino
 board = esp32dev
 lib_deps =
    ${env.lib_deps}
-check_skip_packages = yes
-build_unflags = -std=gnu++11
-build_flags =
-    -std=gnu++2a
-    -DLOG_DEFAULT_LEVEL_VERBOSE=1
 
 [env:esp32s3]
 framework = arduino
 board = esp32-s3-devkitc-1
 lib_deps =
    ${env.lib_deps}
-check_skip_packages = yes
-build_unflags = -std=gnu++11
-build_flags =
-    -std=gnu++2a
-    -DARDUINO_USB_CDC_ON_BOOT
-    -DLOG_DEFAULT_LEVEL_VERBOSE=1
+
+[env:esp32c3]
+framework = arduino
+board = esp32-c3-devkitc-2
+lib_deps =
+   ${env.lib_deps}
+
+[env:esp32c6]
+framework = arduino
+board = esp32-c6-devkitc-1
+lib_deps =
+   ${env.lib_deps}
