--- a/platformio.ini
+++ b/platformio.ini
@@ -21,12 +21,12 @@ lib_deps =
 
 [env:esp32c3]
 framework = arduino
-board = esp32-c3-devkitc-2
+board = esp32-c3-devkitm-1
 lib_deps =
    ${env.lib_deps}
 
 [env:esp32c6]
 framework = arduino
-board = esp32-c6-devkitc-1
+board = esp32-c6-devkitm-1
 lib_deps =
    ${env.lib_deps}
