--- a/platformio.ini
+++ b/platformio.ini
@@ -5,28 +5,32 @@ default_envs = esp32dev
 monitor_speed = 115200
 platform = espressif32
 lib_deps =
-   h2zero/NimBLE-Arduino @ 1.4.2
+   h2zero/NimBLE-Arduino
 
 [env:esp32dev]
 framework = arduino
 board = esp32dev
 lib_deps =
    ${env.lib_deps}
+check_skip_packages = yes
 
 [env:esp32s3]
 framework = arduino
 board = esp32-s3-devkitc-1
 lib_deps =
    ${env.lib_deps}
+check_skip_packages = yes
 
 [env:esp32c3]
 framework = arduino
 board = esp32-c3-devkitm-1
 lib_deps =
    ${env.lib_deps}
+check_skip_packages = yes
 
 [env:esp32c6]
 framework = arduino
 board = esp32-c6-devkitm-1
 lib_deps =
    ${env.lib_deps}
+check_skip_packages = yes
